// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`template render snapshots > renders eslint config for react 1`] = `
"import antfu from '@antfu/eslint-config'

export default antfu(
      { 
        ignores: ['docs/**'],
         react: true
      }
)
"
`;

exports[`template render snapshots > renders eslint config for vue 1`] = `
"import antfu from '@antfu/eslint-config'

export default antfu(
      { 
        ignores: ['docs/**'],
        
      }
)
"
`;

exports[`template render snapshots > renders react main with react-router 1`] = `
"import './style.less'
import { createRoot } from 'react-dom/client'

import { RouterProvider } from 'react-router-dom'
import router from './router'
createRoot(document.getElementById('root')!).render(<RouterProvider router={router} />)
"
`;

exports[`template render snapshots > renders react main with tanstack router 1`] = `
"import './style.scss'
import { createRoot } from 'react-dom/client'

import { RouterProvider } from '@tanstack/react-router'
import router from './router'
createRoot(document.getElementById('root')!).render(<RouterProvider router={router} />)
"
`;

exports[`template render snapshots > renders react main without router 1`] = `
"import './style.scss'
import { createRoot } from 'react-dom/client'

import App from './pages/app'
createRoot(document.getElementById('root')!).render(<App />)
"
`;

exports[`template render snapshots > renders vite config for react with tailwind 1`] = `
"import { defineConfig } from 'vite'
import react from '@vitejs/plugin-react'
import tailwindcss from '@tailwindcss/vite'

// https://vite.dev/config/
export default defineConfig({
  plugins: [
    
    react()
    , tailwindcss()
  ],
  server: {
    host: '127.0.0.1',
    port: 3000,
    open: true,
  },
})
"
`;

exports[`template render snapshots > renders vite config for vue with tailwind 1`] = `
"import { defineConfig } from 'vite'
import vue from '@vitejs/plugin-vue'
import tailwindcss from '@tailwindcss/vite'

// https://vite.dev/config/
export default defineConfig({
  plugins: [
    vue()
    
    , tailwindcss()
  ],
  server: {
    host: '127.0.0.1',
    port: 3000,
    open: true,
  },
})
"
`;

exports[`template render snapshots > renders vite config for vue without tailwind 1`] = `
"import { defineConfig } from 'vite'
import vue from '@vitejs/plugin-vue'

// https://vite.dev/config/
export default defineConfig({
  plugins: [
    vue()
    
    
  ],
  server: {
    host: '127.0.0.1',
    port: 3000,
    open: true,
  },
})
"
`;

exports[`template render snapshots > renders vue app with router and state management 1`] = `
"<script setup lang="ts">
import { RouterView } from 'vue-router'
</script>

<template>
  <div id="app">
    <main class="container">
      <nav class="nav">
        <RouterLink to="/" class="nav-link">Home</RouterLink>
        <RouterLink to="/about" class="nav-link">About</RouterLink>
      </nav>

      <section class="content">
        <RouterView />
      </section>
    </main>
  </div>
</template>

<style scoped lang="less">.container { max-width: 960px; margin: 0 auto; padding: 0 16px; }
.nav { display: flex; gap: 8px; padding: 12px 0; flex-wrap: wrap; }
.nav-link { text-decoration: none; color: inherit; padding: 4px 8px; }
.router-link-active { font-weight: 600; text-decoration: underline; }
.content { padding: 8px 0; }
</style>
"
`;

exports[`template render snapshots > renders vue app without router and state management 1`] = `
"<script setup lang="ts">
import Home from './views/Home.vue'
</script>

<template>
  <div id="app" class="container">
    <Home />
  </div>
</template>

<style scoped lang="scss">.container { max-width: 960px; margin: 0 auto; padding: 0 16px; }
</style>
"
`;
